--- a/src/css/booklet.css
+++ b/src/css/booklet.css
@@ -54,6 +54,37 @@ nav ul li a {
     color: #333;
     font-weight: bold;
 }
+/* Style the dropdown menu */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #fff; /* Background color of the dropdown */
+    min-width: 160px; /* Adjust the width as needed */
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); /* Add a box shadow for the dropdown */
+}
+
+.dropdown:hover .dropdown-content {
+    display: block; /* Show the dropdown when the parent is hovered */
+}
+
+/* Style the links in the dropdown */
+.dropdown-content a {
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    color: #000; /* Text color of the links */
+}
+
+/* Underline the solutions when hovered */
+.dropdown-content a:hover {
+    text-decoration: underline;
+}
+
 /*  styles for the Contact Us div */
 
 .contact {
@@ -68,6 +99,7 @@ nav ul li a {
 }
 .contact button{
     text-align: center;
+    
 }
 
 
@@ -106,6 +138,7 @@ nav ul li a {
 /* button inside the .hero div */
 .hero button {
     position: absolute;
+    
     top: 767px;
     left: 209px;
     width: 267px;
@@ -126,7 +159,7 @@ nav ul li a {
 
 
 
-/* Define hover effect for the button (optional) */
+/* Define hover effect for the button  */
 .hero button:hover {
     background-color: #333333; /* Change background color on hover */
     color: #FFFFFF; /* Change text color on hover */
@@ -141,6 +174,7 @@ nav ul li a {
     left: 472px;
     width: 1448px;
     height: 634px;
+    transform: matrix(1, -0.2, 0.1, 1, 0, 100);
     background: transparent linear-gradient(289deg, #F2AD69 0%, #F2AD6900 100%) 0% 0% no-repeat padding-box;
     opacity: 0.87;
 }
@@ -154,6 +188,13 @@ nav ul li a {
     background: #FBE8D7; /* Background color */
     z-index: -1; /* Set a lower z-index to keep it behind other content */
     opacity: 1; /* Fully visible, you can remove this line if not needed */
+}
+
+.hero img {
+    background-color: white;
+    border-radius: 50%;
+    height: 35px;
+    width: 35px;
 }
 
 
